--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,23 +1,72 @@
 spring:
   application:
-    name: courigistics-backend
+    name: Courigistics
+    frontend-url: ${FRONTEND_URL:http://localhost:5173}
   datasource:
-    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:courigistics}
-    username: ${DB_USER:postgres}
-    password: ${DB_PASSWORD:password}
+    hikari:
+      maximum-pool-size: 20
+      minimum-idle: 5
+      connection-timeout: 20000
+    # Common configurations
   jpa:
-    hibernate:
-      ddl-auto: update
+    open-in-view: false
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: true
-    show-sql: true
-  flyway:
-    enabled: true
-    locations: classpath:db/migration
-  main:
-    allow-bean-definition-overriding: true
+        jdbc:
+          time_zone: UTC
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
+  mail:
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enabled: true
+            required: true
+          connectiontimeout: 5000
+          timeout: 5000
+          writetimeout: 5000
 
 server:
   port: 8080
+
+# JWT Configuration with environment variables
+jwt:
+  secret-key:  ${JWT_SECRET_KEY}
+  #  encryption-key: ${JWT_ENCRYPTION_KEY} # <--- Our encryption key
+  signing-key: ${JWT_SIGNING_KEY} # <--- New: Our signing key
+  access-token-expiration: ${JWT_ACCESS_EXPR}
+  refresh-token-expiration: ${JWT_REFRESH_EXPR}
+  security:
+    include-minimal-claims: true
+    validate-issuer: true
+    validate-environment: true
+    # added Key validation
+    min-key-length: 32 # Minimum 256 bits
+
+# Verification Token properties
+app:
+  verification-token:
+    expiration-minutes: 15 # token expires after 15 minutes
+    token-length: 32 # length of the random bytes used for token generation
+
+# Actuator endpoints enabling
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, info, metrics, prometheus
+  metrics:
+    tags:
+      application: ${spring.application.name}
+
+info:
+  app:
+    name: ${spring.application.name}
+    version: ${project.version:0.0.1-SNAPSHOT}
+    description: "Fileflow secure media management API"
+  author:
+    name: "Stephen Salano"
