--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -32,7 +32,7 @@ spring:
 # Test-specific Logging
 logging:
   level:
-    com.stephensalano.fileflow_api: DEBUG
+    com.courigistics.courigisticsbackend: DEBUG
     org.hibernate.SQL: DEBUG
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
     org.hibernate.Transaction: TRACE
