feat(auth): Add Courier Auth Foundation
- This commit allows further Courier authentication functionality
Files edited:
- Courier.java:added driverslincenceNumber, licenseExpiryDate, pendingApproval, approval timestamps
- Vehicles.java:added chasis number and vehicle status and timesstamp fields
- TokenType.java: added a token type of account setup
- application.yaml: added courier specific configuration
Files Added:
- ApprovalStatus.java: an enum that tracks couriers approval stage
- VehiclesDetailsDTO: Freelancer courier vehicle information
- CourierRegisterRequest.java: captures couriers personal info
- CourierSetupAccountRequest.java: DTO for courier account setup
- CourierRegistrationResponse: Response after successful courier registration

This commit will allow us to further customize the multi-registration for couriers

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -51,11 +51,27 @@ jwt:
     # added Key validation
     min-key-length: 32 # Minimum 256 bits
 
-# Verification Token properties
+# Application-specific properties
 app:
+  # Verification Token properties
   verification-token:
     expiration-minutes: 15 # token expires after 15 minutes
     token-length: 32 # length of the random bytes used for token generation
+
+  # courier-specific configuration
+  courier:
+    approval:
+      auto-approve: false # set to true for testing without admin approval
+      require-vehicle-for-freelancer: true # freelancers must provide vehicles details
+    employee-id:
+      prefix: "COU" # Employee ID format: COU-YYYY-XXXX
+      year-format: "yyyy" # year format in employee ID
+      sequence-length: 4 # Number of digits in sequence (e.g., 0001)
+
+  # default depot assignment (can be overridden by admin)
+    default-depot:
+      code: "NBO-MAIN"# default depot code for new couriers
+
 
 # Actuator endpoints enabling
 management:
