feat: enhance courier auth flow and system configuration
- **Auth Service**: Refined `CourierAuthServiceImpl` logic for registration and approval.
- **Data Layer**: Updated `CourierRepository` with custom JPQL query for ID generation; modified `Courier` and `Vehicles` entities.
- **Configuration**:
  - Updated `AsyncConfig` for better thread management.
  - Configured `EmailConfig` and `EmailServiceImpl` for async notifications.
  - Adjusted `SecurityConfig` to secure new courier endpoints.
  - Updated `application.yaml` and `application-test.yml` properties.
- **Database**: Added initial seed data in `data.sql`.

--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -7,6 +7,7 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create-drop
+    defer-datasource-initialization: true
     properties:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
@@ -25,8 +26,8 @@ spring:
   mail:
     host: ${TEST_MAIL_HOST:sandbox.smtp.mailtrap.io}
     port: ${TEST_MAIL_PORT:2525}
-    username: ${TEST_MAIL_USERNAME} # Your Mailtrap username from env vars
-    password: ${TEST_MAIL_PASSWORD} # Your Mailtrap password from env vars
+    username: ${TEST_MAIL_USERNAME} # Your Mail trap username from env vars
+    password: ${TEST_MAIL_PASSWORD} # Your Mail trap password from env vars
 
 
 # Test-specific Logging
