feat: implement courier account setup and approval notifications
- **Auth Controller**: Added `setupAccount` endpoint for finalizing courier registration.
- **Auth Service**: Implemented logic to handle account setup requests and password setting.
- **Email Service**:
  - Added `sendCourierEmployeeApprovedEmail` and `sendCourierFreelancerApprovedEmail` methods.
  - Created HTML templates for employee and freelancer approval notifications.
- **Security**: Updated `SecurityConfig` to allow access to the setup account endpoint.
- **DTO**: Introduced `CourierSetupAccountRequest` for handling setup data.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -62,7 +62,7 @@ app:
   # courier-specific configuration
   courier:
     approval:
-      auto-approve: false # set to true for testing without admin approval
+      auto-approve: true # set to true for testing without admin approval
       require-vehicle-for-freelancer: true # freelancers must provide vehicles details
     employee-id:
       prefix: "COU" # Employee ID format: COU-YYYY-XXXX
