--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -11,6 +11,7 @@ spring:
     properties:
       hibernate:
         format_sql: true
+        dialect: org.hibernate.dialect.PostgreSQLDialect
   mail:
     host: ${TEST_MAIL_HOST:smtp.gmail.com}
     port: ${TEST_MAIL_PORT:587}
